--- a/guestweb/common_templates/partials/MGM/GrandDetroit/gwCheckoutfinal.html
+++ b/guestweb/common_templates/partials/MGM/GrandDetroit/gwCheckoutfinal.html
@@ -29,7 +29,7 @@
     <div class="row" ng-show="posted && success && isCheckoutCompleted && !netWorkError">
         <div class="col-md-2"></div>
         <div class="col-md-8 top-spacing">
-            <p class="main-text">We hope to welcome you back to Grand Detroit soon.</p>
+            <p class="main-text">We hope to welcome you back to MGM Grand Detroit soon.</p>
          <!--   <p class="sub-main-text"> Please retain your room key to exit the Self-Parking Garage should you be departing by vehicle.</p> -->
         </div>
         <div class="col-md-2">
